Some design changes

--- a/styles/input.css
+++ b/styles/input.css
@@ -12,13 +12,13 @@
     src: url("../assets/PlusJakartaSans-ExtraBold.ttf")format(truetype);
 }
 h2 {
-    @apply no-underline text-3xl md:text-5xl w-full content-center font-black;
+    @apply no-underline text-3xl md:text-5xl w-full content-center font-circleBold;
 }
 h1, h3 {
-    @apply text-3xl md:text-5xl flex content-center w-full font-black underline;
+    @apply text-3xl md:text-5xl flex content-center w-full font-circleBold underline;
 }
 .button {
-    @apply p-4 bg-[#3cbe61] dark:bg-[#4cc98a] rounded-3xl w-40 cursor-pointer font-black;
+    @apply p-3 bg-cyan-500 hover:bg-cyan-600 rounded-lg w-40 cursor-pointer font-circleBold;
 }
 .grad {
     @apply bg-gradient-to-br from-[#299300] via-[#009274] to-[#0088BD] bg-clip-text;
